Fix logo alignment on index page

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -8,6 +8,7 @@ body.index {
 		.title {
 			img {
 				float: none;
+				margin: 0;
 				height: 12em;
 			}
 
